--- a/src/companents/Hello/Hello.css
+++ b/src/companents/Hello/Hello.css
@@ -62,6 +62,8 @@ html {
 }
 
 .navbar_container_mobile {
+    display: flex;
+    justify-content: center;
     max-height: 0;
     overflow: hidden;
     opacity: 0;
@@ -156,7 +158,7 @@ html {
     .close_navbar_mobile {
         position: absolute;
         top: -8%;
-        left: 85%;
+        left: 70%;
     }
 
     .close_icon {
