--- a/src/companents/Hello/Hello.css
+++ b/src/companents/Hello/Hello.css
@@ -69,8 +69,6 @@ html {
     opacity: 0;
     transition: max-height 0.4s ease, opacity 0.4s ease;
     position: absolute;
-    top: -20%;
-    left: 39.2%;
     width: 260px;
     text-align: center;
     background-color: #3333FF;
@@ -78,11 +76,144 @@ html {
 }
 
 
-@media only screen and (max-width: 480px) {
+.close_burger{
+  display: none;
+}
+.open_burger{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.close{
+    display: none;
+}
+.open{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: -2rem;
+    margin-right: -.5rem;
+}
+
+.burger_container{
+  display: none;
+}
+@media only screen and (min-width: 360px) {
     .desktop-hello {
         display: none;
     }
+    .burger_container{
+      display: flex;
+    }
+    .navbar_container_mobile {
+        display: flex;
+        justify-content: center;
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transition: max-height 0.4s ease, opacity 0.4s ease;
+        position: absolute;
+        width: 260px;
+        text-align: center;
+        background-color: #3333FF;
+        z-index: 10;
+    }
 
+    .Download_CV {
+        width: 130px;
+    }
+
+    .mobile-hello {
+        display: block;
+    }
+
+    .photo {
+        width: 360px;
+    }
+
+    .first_section_container {
+        display: grid;
+    }
+
+    .photo_container {
+        display: flex;
+    }
+
+    .my_about_text {
+        width: 360px;
+    }
+
+    .navbar_container {
+        display: none;
+    }
+
+    .burger {
+        display: block;
+    }
+
+    .burger_item {
+        width: 30px;
+    }
+
+    .burger_item:hover {
+        cursor: pointer;
+    }
+
+    .header_container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .navbar_container_mobile.open {
+        display: grid;
+        min-height: 110vh;
+        opacity: 1;
+    }
+
+    .navbar_container_mobile.close {
+        display: none;
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+    }
+
+
+    .navbar_items_mobile {
+        display: grid;
+        list-style: none;
+        gap: 4rem;
+        text-transform: uppercase;
+        font-family: Lato, sans-serif;
+        font-weight: 700;
+        font-size: 20px;
+        padding: 1rem;
+        line-height: 1.66;
+    }
+
+    .link_nav {
+        color: white;
+    }
+
+    .close_navbar_mobile {
+        display: flex;
+        justify-content: right;
+        margin-top: -4rem;
+        margin-right: -1rem;
+    }
+
+    .close_icon {
+        color: #fff;
+        font-size: 4rem;
+        cursor: pointer;
+    }
+}
+
+@media only screen and (min-width: 480px) {
+    .desktop-hello {
+        display: none;
+    }
+    .burger_container{
+      display: flex;
+    }
     .mobile-hello {
         display: block;
     }
@@ -124,17 +255,30 @@ html {
         justify-content: space-between;
     }
 
+    .navbar_container_mobile {
+        display: flex;
+        justify-content: center;
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transition: max-height 0.4s ease, opacity 0.4s ease;
+        position: absolute;
+        width: 260px;
+        text-align: center;
+        background-color: #3333FF;
+        z-index: 10;
+    }
+
     .navbar_container_mobile.open {
         display: grid;
-        align-items: center;
-        min-height: 101vh;
+        min-height: 110vh;
         opacity: 1;
     }
-    
+
     .navbar_container_mobile.close {
         display: none;
         max-height: 0;
-        overflow: hidden;    
+        overflow: hidden;
         opacity: 0;
     }
 
@@ -156,9 +300,10 @@ html {
     }
 
     .close_navbar_mobile {
-        position: absolute;
-        top: -8%;
-        left: 70%;
+        display: flex;
+        justify-content: right;
+        margin-top: -4rem;
+        margin-right: -1rem;
     }
 
     .close_icon {
@@ -166,4 +311,417 @@ html {
         font-size: 4rem;
         cursor: pointer;
     }
+}
+@media only screen and (min-width: 720px) {
+    .desktop-hello {
+        display: none;
+    }
+    .burger_container{
+      display: none;
+    }
+    .mobile-hello {
+        display: block;
+        padding-top: 2rem;
+    }
+
+    .photo {
+        width: 400px;
+    }
+
+    .first_section_container {
+        display: grid;
+    }
+
+    .photo_container {
+        display: flex;
+    }
+
+    .my_about_text {
+        width: 400px;
+    }
+
+    .navbar_container {
+        display: block;
+    }
+
+    .burger {
+        display: none;
+    }
+
+    .burger_item {
+        width: 30px;
+    }
+
+    .burger_item:hover {
+        cursor: pointer;
+    }
+
+    .header_container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .navbar_container_mobile {
+        display: flex;
+        justify-content: center;
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+        transition: max-height 0.4s ease, opacity 0.4s ease;
+        position: absolute;
+        width: 260px;
+        text-align: center;
+        background-color: #3333FF;
+        z-index: 10;
+    }
+
+    .navbar_container_mobile.open {
+        display: grid;
+        min-height: 110vh;
+        opacity: 1;
+    }
+
+    .navbar_container_mobile.close {
+        display: none;
+        max-height: 0;
+        overflow: hidden;
+        opacity: 0;
+    }
+
+
+    .navbar_items_mobile {
+        display: grid;
+        list-style: none;
+        gap: 4rem;
+        text-transform: uppercase;
+        font-family: Lato, sans-serif;
+        font-weight: 700;
+        font-size: 20px;
+        padding: 1rem;
+        line-height: 1.66;
+    }
+
+    .link_nav {
+        color: #000;
+    }
+
+    .open{
+        display: none;
+        justify-content: flex-end;
+        margin-top: -2rem;
+        margin-right: -.5rem;
+    }
+
+    .close_navbar_mobile {
+        display: flex;
+        justify-content: right;
+        margin-top: -4rem;
+        margin-right: -1rem;
+    }
+
+    .close_icon {
+        color: #fff;
+        font-size: 4rem;
+        cursor: pointer;
+    }
+}
+@media only screen and (min-width: 900px) {
+    .desktop-hello {
+        display: block;
+    }
+
+    .mobile-hello {
+        display: none;
+        padding-top: 2rem;
+    }
+
+    .navbar_items {
+        list-style: none;
+        display: flex;
+        gap: 2rem;
+        text-transform: uppercase;
+        font-family: Lato, sans-serif;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 1.66;
+      }
+      
+      .divide {
+        border: 1px solid rgb(233, 233, 235);
+        width: 100%;
+        margin-top: 1rem;
+      }
+      
+      .my_name {
+        font-weight: 700;
+        font-family: Lato, sans-serif;
+        font-size: 18px;
+      }
+      
+      .header_container {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+      }
+      
+      .my_name_container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+      .about_contact {
+        display: grid;
+        align-items: center;
+        font-size: 14px;
+      }
+      
+      .my_about_text {
+        font-size: 16px;
+        line-height: 1.56;
+        font-family: Roboto, sans-serif;
+        width: 450px;
+        color: #252525;
+      }
+      
+      .section_my_about_container {
+        display: flex;
+        justify-content: center;
+      }
+      
+      .contact {
+        font-size: 12px;
+        font-weight: 700;
+        text-transform: uppercase;
+        font-family: Lato, sans-serif;
+        line-height: 1.7;
+      
+      }
+      
+      .contact_answer {
+        font-size: 14px;
+        font-family: Roboto, sans-serif;
+      }
+      
+      .about_contact_container {
+        display: flex;
+        align-items: center;
+        gap: 4rem;
+      }
+      .burger_container{
+        display: none;
+      }
+      
+      .Download_CV {
+        width: 170px;
+        text-align: center;
+        padding: 15px;
+        border: none;
+        border-radius: 2px;
+        background: #efefef;
+        text-decoration: none;
+        color: #252525;
+        font-family: Lato, sans-serif;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.66;
+        text-transform: uppercase;
+      }
+      
+      .contact_me {
+        width: 170px;
+        text-align: center;
+        padding: 15px;
+        border: none;
+        border-radius: 2px;
+        background: #33f;
+        text-decoration: none;
+        color: #fff;
+        font-family: Lato, sans-serif;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.66;
+        text-transform: uppercase;
+      }
+      
+      .download_container {
+        padding-top: 2rem;
+        display: flex;
+        gap: 2rem;
+      }
+      
+      .contact_me:hover {
+        box-shadow: 10px 5px 5px rgba(51, 51, 255, .2);
+        transition: all .3s ease;
+        cursor: pointer;
+      }
+      
+      
+      .Download_CV:hover {
+        box-shadow: 10px 5px 5px rgba(37, 37, 37, .2);
+        transition: all .3s ease;
+      }
+      
+      .first_section_container {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+      }
+      
+      .photo_container {
+        display: flex;
+      }
+      
+      .photo {
+        width: 450px;
+      }
+      
+      .icon_my_skills {
+        width: 50px;
+      }
+      
+      .my_skills_container {
+        display: grid;
+        place-items: center;
+      }
+      
+      .all_my_skills_container {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1rem;
+      }
+      
+      .skills {
+        font-size: 30px;
+        line-height: 1.4;
+        font-family: Lato, sans-serif;
+      }
+      
+      .my_skills_about {
+        font-size: 16px;
+        line-height: 1.56;
+        font-family: Roboto, sans-serif;
+        color: #252525;
+        width: 300px;
+      }
+      
+      .skills_container {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding-top: 2rem;
+      }
+      
+      .point {
+        color: #33f;
+        border-radius: 50%;
+      }
+      
+      .skills_icon {
+        width: 100px;
+      }
+      
+      .skills_header_container {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+      }
+      
+      .all_my_education_container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 1rem;
+      }
+      
+      .icon_my_education {
+        width: 100px;
+      }
+      
+      .education_history {
+        opacity: .8;
+      }
+      
+      .education_qualification {
+        opacity: .8;
+        font-style: italic;
+      }
+      
+      .education_about {
+        text-align: center;
+      }
+      
+      .project_img {
+        width: 300px;
+      }
+      
+      .project_container {
+        text-align: center;
+      }
+      
+      .all_project_container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        place-items: center;
+        gap: 2rem;
+        padding-top: 2rem;
+      }
+      
+      .visit_github {
+        width: 100px;
+        text-align: center;
+        padding: 15px;
+        border: none;
+        border-radius: 2px;
+        background: rgb(0, 128, 49);
+        text-decoration: none;
+        color: #fff;
+        font-family: Lato, sans-serif;
+        font-weight: 700;
+        font-size: 10px;
+        line-height: 1.66;
+        text-transform: uppercase;
+      }
+      .pagination{
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+        padding-top: 2rem;
+      }
+      
+      
+      .previous {
+        background-color: #f1f1f1;
+        padding: 1rem;
+        width: 100px;
+        color: black;
+        border:none;
+        box-shadow: 10px 5px 5px rgba(51, 51, 255, .2);
+      }
+      
+      .next {
+        background-color: #04AA6D;
+        color: white;
+        padding: 1rem;
+        width: 100px;
+        border:none;
+        box-shadow: 10px 5px 5px rgba(51, 51, 255, .2);
+      }
+      
+      .previous:hover{
+        background-color: #04AA6D;
+        color: white;
+        transition: all .3s ease;
+      }
+      .next:hover{
+        background-color: #f1f1f1;
+        color: black;
+        transition: all .3s ease;
+      }
+      
+      .visit_github:hover{
+        color: #252525;
+        background-color: #fff;
+        box-shadow: 10px 5px 5px rgba(1, 1, 158, 0.2);
+        transition: all .3s ease;
+      }
 }
