--- a/src/companents/Hello/Hello.css
+++ b/src/companents/Hello/Hello.css
@@ -224,6 +224,15 @@ html {
         font-size: 4rem;
         cursor: pointer;
     }
+    .contact{
+      width: 50px;
+    }
+    .contact_answer{
+      width: 200px;
+    }
+    .sosial_icon_container{
+      width: 200px;
+    }
 }
 
 @media only screen and (min-width: 480px) {
