--- a/src/companents/Portfolio/Portfolio.css
+++ b/src/companents/Portfolio/Portfolio.css
@@ -39,6 +39,28 @@
         display: flex;
 
     }
+
+    .portfolio_container {
+        display: flex;
+        justify-content: space-around;
+        gap: 2rem;
+    }
+
+    .Portfolio_header_container {
+        display: flex;
+        align-items: center;
+    }
+
+    .portfolio_icon {
+        width: 50px;
+    }
+
+    .portfolio_word {
+        font-size: 16px;
+        line-height: 1.4;
+        font-family: Lato, sans-serif;
+
+    }
 }
 
 
@@ -68,6 +90,32 @@
         display: flex;
 
     }
+
+    .portfolio_container {
+        display: flex;
+        justify-content: space-around;
+        gap: 2rem;
+    }
+
+    .Portfolio_header_container {
+        display: flex;
+        align-items: center;
+    }
+
+    .portfolio_icon {
+        width: 50px;
+    }
+
+    .portfolio_word {
+        font-size: 16px;
+        line-height: 1.4;
+        font-family: Lato, sans-serif;
+
+    }
+}
+
+#PORTFOLIO {
+    padding-top: 1rem;
 }
 
 #mobile_all_project_container720 {
@@ -118,6 +166,31 @@
         padding-top: 2rem;
     }
 
+
+    .portfolio_container {
+        display: flex;
+        justify-content: space-around;
+        gap: 2rem;
+    }
+
+    .Portfolio_header_container {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .portfolio_icon {
+        width: 100px;
+    }
+
+    .portfolio_word {
+        font-size: 30px;
+        line-height: 1.4;
+        font-family: Lato, sans-serif;
+
+    }
+
+
 }
 
 
@@ -133,7 +206,7 @@
     #desktop_all_project_container {
         display: none;
     }
-  
+
     #mobile_all_project_container {
         display: none;
 
@@ -164,4 +237,3 @@
         padding-top: 2rem;
     }
 }
-
