--- a/src/companents/Footer/Footer.css
+++ b/src/companents/Footer/Footer.css
@@ -13,4 +13,7 @@
     margin-top: 2rem;
     padding-top: 1px;
     padding-bottom:1px ;
+    margin-bottom: -1rem;
+    margin-left: -1rem;
+    margin-right: -.5rem;
 }
