--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,9 @@
   font-family: Lato, sans-serif;
   font-size: 18px;
 }
+.my_name:hover{
+  cursor:pointer
+}
 
 .header_container {
   display: flex;
