--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -631,6 +631,7 @@ html {
       
       .icon_my_skills {
         width: 50px;
+        height: 50px;
       }
       
       .my_skills_container {
