--- a/src/components/Diploma/Diploma.css
+++ b/src/components/Diploma/Diploma.css
@@ -1,31 +1,84 @@
-.my_diploma{
-    width: 500px;
+.modal_diploma {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
 }
 
+.modal_content_diploma {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    position: relative;
+}
+
+.close_button_diploma {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+    color: white;
+    background-color: red;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    border-radius: 10px;
+}
+
+.modal_image_diploma {
+    max-width: 100%;
+    height: auto;
+}
+
+
 @media only screen and (min-width: 360px) {
-    .my_diploma{
+    .my_diploma {
         width: 330px;
+    }
+
+    .modal_image_diploma {
+        max-width: 100%;
+        height: 250;
     }
 }
 
 
 @media only screen and (min-width: 480px) {
-    .my_diploma{
+    .my_diploma {
         width: 400px;
     }
+    
+.modal_image_diploma {
+    max-width: 100%;
+    height: 300px;
 }
+}
+
 @media only screen and (min-width: 720px) {
-    .my_diploma{
+    .my_diploma {
         width: 500px;
     }
+    
+.modal_image_diploma {
+    max-width: 100%;
+    height: 450px;
 }
+}
+
 @media only screen and (min-width: 900px) {
-    .my_diploma{
+    .my_diploma {
         width: 400px;
     }
 }
+
 @media only screen and (min-width: 1000px) {
-    .my_diploma{
+    .my_diploma {
         width: 500px;
     }
 }
