--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,8 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .my_name_container {
